# dggstools

./: .gitignore  CITATION.cff  Dockerfile  README.md  changelog.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci-release.yml  ci-reusable-build.yml  ci-reusable-data-tests.yml  ci-stable-release.yml  ci.yml  docs.yml
dggstools/: __init__.py  __main__.py
dggstools/auids/: __init__.py  auids.py  common.py  rhpx.py  rhpx_auids.py
dggstools/rhpx/: __init__.py  raster_to_rhpx.py  rhpx_gdf_helper.py  rhpxdataframes.py  rhpxutils.py  vector_to_rhpx.py
dggstools/rhpx/utils/: __init__.py  rasterutils.py  storage.py  (+2 more)
testing_playground/: manual_tests.py
tests/data_tests/: __init__.py  tests_data.py
tests/script_tests/: __init__.py  tests_rhpx_scripts.py
tests/test_data/: 685.j2w  685.jp2  685.prj  Aragón_ETRS89_30N.dbf  Aragón_ETRS89_30N.shp  Aragón_ETRS89_30N.shx  HYP_50M_SR_W.tfw  HYP_50M_SR_W.tif  Iberia.tif  NAIP_30.img  NYC_Noise_Part_UTM_18N_WGS84.gpkg  Pop_AgricRegion.dbf  Pop_AgricRegion.sbn  Pop_AgricRegion.sbx  Pop_AgricRegion.shp  Pop_AgricRegion.shx  SJER2013_DTM.tif  altitudes.csv  c_gls_SCE500_202112070000_CEURO_MODIS_V1.0.1.nc  c_gls_SCE500_202112310000_CEURO_MODIS_V1.0.1.nc  landsat_image_small-rhpx-N1-S0-NSide3-res11-band1-linedrawn.tiff  landsat_image_small-rhpx-N1-S0-NSide3-res11-band1-linedrawn.tiff.aux.xml  landsat_image_small-rhpx-N1-S0-NSide3-res11-band1.tiff  landsat_image_small-rhpx-N1-S0-NSide3-res11.tif  landsat_image_small-rhpx-N1-S0-NSide3-res11.tif.aux.xml  landsat_image_small.tif  landsat_image_small.tif.aux.xml  mini_rhealpix_n1_s0_nside3.tiff  mini_rhealpix_n1_s0_nside3.tiff.aux.xml  mini_rhealpix_n1_s0_nside3_N4_value_40.tiff  mini_rhealpix_n1_s0_nside3_N4_value_40.tiff.aux.xml  mini_rhealpix_n1_s0_nside3_N4_value_50.tiff  mini_rhealpix_n1_s0_nside3_N5_value_50.tiff  mini_rhealpix_n1_s0_nside3_N5_value_50.tiff.aux.xml  nasadem.tif  pnoa_2015_25830_0354_4_4.jpg.aux.xml  temperatures.csv  temperatures_other_zones.csv  temperatures_several_values_per_zone.csv  temperatures_some_zones_changed.csv  (+1 more)
tests/unit_tests/: __init__.py  tests_auids.py  tests_dggstools.py
