requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "dggstools"
version = "0.2.0"
dynamic = ["dependencies"]

[project.scripts]
dggstools = "dggstools.__main__:app"

[tool.setuptools]
packages = ["dggstools", "dggstools.auids", "dggstools.rhpx", "dggstools.rhpx.utils"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}